# crafting_interpreters

./: .gitignore  plox-runner  run-test.py
plox/: .gitignore  README.md  _callable.py  _environment.py  _expr.py  _resolver.py  _scanner.py  _token.py  pyproject.toml
plox/plox/: _callable.py  _environment.py  _errors.py  _expr.py  _interpreter.py  _parser.py  _resolver.py  _scanner.py  _stmt.py  _token.py  lox.py
plox/tests/arrays/: test_empty_pop.py  test_empty_popleft.py
plox/tests/assignment/: test_associativity.py  test_global.py  test_local.py
plox/tests/bool/: test_equality.py  test_not.py
plox/tests/break/: test_conditional_break.py  test_for_break.py  test_global_break.py  test_nested_mixed_break.py  test_non_loop_break.py
plox/tests/builtins/: test_array.py  test_len.py  test_re.py
plox/tests/call/: test_object.py
plox/tests/class/: test_class_inherited_method.py  test_class_local_reference_self.py  test_class_reference_self.py
plox/tests/class_constructor/: test_constructor_arguments.py  test_constructor_default_arguments.py  test_constructor_early_return.py  test_constructor_extra_arguments.py  test_constructor_return_in_nested_function.py
plox/tests/closure/: test_assign_to_shadowed_later.py  test_close_over_function_parameter.py  test_close_over_method_parameter.py  test_reference_closure_multiple_times.py
plox/tests/comments/: test_comment_at_eof.py  test_nested_block_comment.py  test_only_line_comment.py  test_only_line_comment_and_line.py  test_unicode_comments.py  test_unterminated_block_comment.py
plox/tests/nil/: test_literal.py
(+268 files in other folders)
